# Tearing

./: .gitignore  Authors.md  CMakeLists.txt  README.md  TearingConfig.cmake.in  TearingPluginDocumentation.docx  tearingConfig.cmake.in
.github/: FUNDING.yml
.github/workflows/: ci.yml
Tearing_test/: CMakeLists.txt  TearingEngine_test.cpp
doc/: 3D crack propagation.docx  Tearing_doc.md  test computeRestTriangleArea.txt
examples/Benchmarks/: Scenario-03_squareTissue_corner-horizontal-cut.scn  Scenario-05_squareTissue-hole-vertical-cut.scn  Scenario-06_squareTissue-hole-diagonal-cut.scn  TestCase-02_bad-cutted-mesh.scn  TestCase-03_vertexConnectedTriangles.scn
examples/TearingEngine/: SquareTissue_01_gravity.scn  SquareTissue_01_gravity_interaction.scn  SquareTissue_02_pressureBorder.scn  SquareTissue_03_centralePressure.scn  SquareTissue_05_circleHole_gravity.scn  SquareTissue_08_verticalHole_gravity.scn  SquareTissue_12_MiddlePressure .scn  SquareTissue_12_MiddlePressure _Big.scn  SquareTissue_12_MiddlePressure _Big.scn.qglviewer.view
examples/TopologyBenchmarks/: TriangleSubdivision_benchmark-01_1Node.scn  TriangleSubdivision_benchmark-05_2Node.scn
examples/VolumeTearingEngine_scenes/: CasTest1.scn  CasTest4.scn  CasTest5.scn  CasTest6.scn  cisaillement.scn
regression/: regression_tests.py
scenes/: CasTest1.scn  CasTest1_gravity.scn  CasTest1_time.scn  CasTest2.scn  CasTest3.scn  CasTest4.scn  CasTest5_holeCircular.scn  CasTest5_holeSquare.scn  CasTest5_holeSquareVertical.scn  CasTest5_incision.scn  CasTest6_pre-cut.scn  CasTest6_pre-cut2.scn  CasTest6_sablier.scn  RegressionStateScenes.regression-tests  RegressionTopologyScenes.regression-tests  test.scn  test.scn.qglviewer.view
scenes/Benchmarks/: Scenario-01_squareTissue_horizontal-cut.scn  Scenario-02_squareTissue_diagonal-cut.scn  Scenario-03_squareTissue_corner-horizontal-cut.scn  Scenario-04_squareTissue_corner-vertical-cut.scn  Scenario-05_squareTissue-hole-vertical-cut.scn  Scenario-06_squareTissue-hole-diagonal-cut.scn  TestCase-01_bad-cutted-mesh.scn  TestCase-02_bad-cutted-mesh.scn  TestCase-03_vertexConnectedTriangles.scn  scenario1.scn  scenario2.scn  scenario3.scn  scenario4.scn  scenario5.scn  scenario6.scn  scenario8.scn
scenes/TearingEngine/: CasTest7_collision.scn  SquareTissue_01_gravity.scn  SquareTissue_01_gravity.scn.qglviewer.view  SquareTissue_01_gravity.scn.view  SquareTissue_01_gravity_interaction.scn  SquareTissue_02_pressureBorder.scn  SquareTissue_03_centralePressure.scn  SquareTissue_04_cornerPressure.scn  SquareTissue_05_circleHole_gravity.scn  SquareTissue_06_circleHole_pressureBorder.scn  SquareTissue_07_squareHole_gravity.scn  SquareTissue_08_verticalHole_gravity.scn  SquareTissue_09_incised_gravity.scn  SquareTissue_10_circleHole_pressureBorder - Copy.scn  SquareTissue_11_MiddlePressure .scn  SquareTissue_11_MiddlePressure .scn.qglviewer.view  SquareTissue_12_MiddlePressure .scn  SquareTissue_12_MiddlePressure .scn.qglviewer.view  SquareTissue_12_MiddlePressure _Big.scn
scenes/TearingEngine_scenes/: CasTest1.scn  CasTest1_gravity.scn  CasTest1_gravity.scn.qglviewer.view  CasTest1_gravity_00000.mtl  CasTest1_time.scn  CasTest2.scn  CasTest3.scn  CasTest4.scn  CasTest5_holeCircular.scn  CasTest5_holeCircular.scn.qglviewer.view  CasTest5_holeSquare.scn  CasTest5_holeSquareVertical.scn  CasTest5_incision.scn  CasTest6_pre-cut.scn  CasTest6_pre-cut2.scn  CasTest6_sablier.scn  CasTest7_collision.scn  TriangleSurfaceCutting.scn  test.scn
scenes/TopologyBenchmarks/: Benchmark_01_TriangleCut_plane.scn  Benchmark_01_TriangleCut_plane.scn.qglviewer.view  Benchmark_05_TriangleSubdivision_2Node.scn  Benchmark_06_TriangleSubdivision_plane_connected.scn  Benchmark_07_TriangleSubdivision_plane_notConnected.scn  Benchmark_TriangleSubdivision_plane_03.scn  TriangleCut_benchmark-01_simpleCut.scn  TriangleCut_benchmark-01_simpleCut.scn.qglviewer.view  TriangleCut_benchmark-02_snapping.scn  TriangleCut_benchmark-02_snapping.scn.qglviewer.view  TriangleCut_benchmark-03_snapping.scn  TriangleCut_benchmark-03_snapping.scn.qglviewer.view  TriangleCut_benchmark-04_snappingStartEdge.scn  TriangleCut_benchmark-04_snappingStartEdge.scn.qglviewer.view  TriangleCut_benchmark-05_snappingEdgeInside.scn  TriangleCut_benchmark-06_snappingPointOutside.scn  TriangleCut_benchmark-06_snappingPointOutside.scn.qglviewer.view  TriangleCut_benchmark-07_snappingPointInside.scn  TriangleCut_benchmark-08_snappingDebug.scn  TriangleCuttingController_1Edge.scn  TriangleCuttingController_1Node.scn  TriangleCuttingController_2Edge.scn  TriangleCuttingController_2Node.scn  TriangleCuttingController_3Edge.scn  TriangleCuttingController_plane_01.scn  TriangleCuttingController_plane_02.scn  TriangleSubdivision_benchmark-02_1Edge.scn  TriangleSubdivision_benchmark-04_3Edge.scn  TriangleSubdivision_benchmark-08_plane_full.scn
scenes/VolumeTearingEngine_scenes/: CasTest1.scn  CasTest2.scn  CasTest3.scn  CasTest4.scn  CasTest5.scn  CasTest6.scn  CasTest7-poutre.scn  RemovingHexa2TetraProcess.scn  cisaillement.scn  testVolume.scn
scenes/mesh/: square_tissue.blend
scenes/scenarios/: scenario1.scn  scenario10.scn  scenario11.scn  scenario12.scn  scenario3.scn  scenario4.scn  scenario7.scn  scenario8.scn  scenario9.scn
src/Tearing/: BaseTearingEngine.cpp  BaseTearingEngine.h  BaseTearingEngine.inl  TearingAlgorithms.cpp  TearingAlgorithms.h  TearingAlgorithms.inl  TearingEngine.cpp  TearingEngine.h  TearingEngine.inl  TearingScenarioEngine.cpp  TearingScenarioEngine.h  TearingScenarioEngine.inl  VolumeTearingAlgorithms.cpp  VolumeTearingAlgorithms.h  VolumeTearingAlgorithms.inl  VolumeTearingEngine.cpp  VolumeTearingEngine.h  VolumeTearingEngine.inl  config.h.in  initTearing.cpp  initTearing.h  inittearing.cpp
src/tearing/: StressDetector.cpp  StressDetector.h  TearingAlgorithms.cpp  TearingAlgorithms.h  TearingAlgorithms.inl  TearingEngine.cpp  TearingEngine.h  TearingEngine.inl  VolumeTearingAlgorithms.h  VolumeTearingAlgorithms.inl  VolumeTearingEngine.h  VolumeTearingEngine.inl  config.h.in  inittearing.cpp
(+16 files in other folders)
